--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "expo": {
-    "name": "TrickList",
-    "slug": "TrickList",
+    "name": "TrickBookPublic",
+    "slug": "TrickBookPublic",
     "version": "1.0.0",
+    "privacy":"public",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./app/assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./app/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,7 +23,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./app/assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
