--- a/package.json
+++ b/package.json
@@ -9,10 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.6",
+    "apisauce": "^1.1.1",
     "expo": "~47.0.8",
+    "expo-file-system": "~15.1.1",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.2",
+    "expo-permissions": "~14.0.0",
+    "expo-secure-store": "~12.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "formik": "^2.2.9",
+    "jotai": "^1.11.2",
+    "jwt-decode": "^3.1.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
